style: constrain root bounds and set overflow hidden to prevent window overfill

--- a/src/index.css
+++ b/src/index.css
@@ -16,15 +16,17 @@
 body {
   margin: 0;
   min-width: 320px;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
 }
 
-
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   display: flex;
+  overflow: hidden;
 }
+
